feat(advanced network): migrate to rivermax-dev-kit framework
- Update Rivermax SDK from 1.60.6 to 1.70.21
- Replace legacy rmax-ral-lib with modern rivermax-dev-kit components
- Implement multi-receiver architecture supporting:
  - IPO receivers SMPTE 2022-7
  - RTP receivers SMPTE 2210-20
  - Media Frame Transmitters (SMPTE 2110-20)
- Refactor configuration system with typed builders:
  - Strong type checking for queue parameters
  - Validation pipelines for settings
  - Auto-generated documentation hooks
- Update build system:
  - New CMake targets for dev-kit services
  - Dockerfile SDK version alignment
  - Dependency cleanup
- Improve memory management and resource cleanup.
- Add proper shutdown handling for services.
- Enhance error handling and logging.

Removed components:
- Legacy IPO receiver service implementation
- RMAX base service classes
- Obsolete chunk consumer interfaces

Added components:
- RivermaxQueueConfigs hierarchy
- TypedConfigBuilderHolder pattern
- MediaSenderService

Affected components:
- RivermaxMgr core implementation
- Burst management system
- Packet processing pipeline
- YAML configuration parsing
- Docker build infrastructure

Dependencies:
- Requires Rivermax SDK >=1.70.21

Signed-off-by: Rony Rado <rrado@nvidia.com>

--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_rx.yaml
@@ -54,6 +54,7 @@ advanced_network:
           - "Data_RX_CPU"
           - "Data_RX_GPU"
           rivermax_rx_settings:
+            settings_type: "ipo_receiver"
             memory_registration: true
             #allocator_type: "huge_page_2mb"
             verbose: true
@@ -72,7 +73,7 @@ advanced_network:
             destination_ports:
               - 50001
               - 50001
-            rx_stats_period_report_ms: 3000
+            stats_report_interval_ms: 100
             send_packet_ext_info: true
 
 bench_rx:
