refactor(advanced_network): standardize rmax to rivermax project-wide
- Rename all code references from 'rmax' to 'rivermax' for consistency
- Update filenames containing 'rmax' to use full 'rivermax' naming
- Modify documentation/comments using abbreviated form
- Update CMakeLists.txt and build configurations

Affected components:
* rmax_config_manager → rivermax_config_manager
* rmax_utils → rivermax_utils
* RmaxParams → RivermaxParams
* All instances in source headers/docs/comments

Signed-off-by: Rony Rado <rrado@nvidia.com>

--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_rx.yaml
@@ -53,7 +53,7 @@ advanced_network:
           memory_regions:
           - "Data_RX_CPU"
           - "Data_RX_GPU"
-          rmax_rx_settings:
+          rivermax_rx_settings:
             memory_registration: true
             #allocator_type: "huge_page_2mb"
             verbose: true
