feat(rivermax): implement SMPTE 2110-20 media transmitter service
- Add hardware-accelerated video streaming with three memory modes:
 (GPU, host pinned, huge pages)
- Enable concurrent TX/RX operations with thread-safe buffer management
- Support multiple video formats:
  - YCbCr 4:2:2/4:4:4/4:2:0
  - RGB 8/10/12-bit
- Add Rivermax TX benchmarking tools for performance evaluation
- Update Rivermax SDK from 1.70.21 to 1.70.32

Key components:
- MediaSenderService with CUDA-accelerated frame processing
- BurstParams lifecycle management system
- YAML configuration support for:
  - Video resolution (HD/4K)
  - Frame rates (24-60 fps)
  - Traffic shaping parameters

Added configurations:
- TX-only scenario (adv_networking_bench_rivermax_tx.yaml)
- Combined TX+RX scenario (adv_networking_bench_rivermax_tx_rx.yaml)

Signed-off-by: Rony Rado <rrado@nvidia.com>

--- a/operators/advanced_network/advanced_network/managers/rivermax/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/managers/rivermax/CMakeLists.txt
@@ -27,6 +27,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/r
 target_sources(${PROJECT_NAME}
     PRIVATE
         rivermax_mgr_impl/adv_network_rivermax_mgr.cpp
+        rivermax_mgr_impl/rivermax_mgr_service.cpp
         rivermax_mgr_impl/burst_manager.cpp
         rivermax_mgr_impl/rivermax_config_manager.cpp
         rivermax_mgr_impl/rivermax_queue_configs.cpp
