--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_tx_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_tx_rx.yaml
@@ -1,5 +1,5 @@
 %YAML 1.2
-# SPDX-FileCopyrightText: Copyright (c) 2022-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,8 +26,7 @@ advanced_network:
     manager: "rivermax"
     master_core: 5              # Master CPU core
     debug: 1
-    log_level: "warn"
-    loopback: ""
+    log_level: "debug"
 
     memory_regions:
     - name: "Data_RX_CPU"
@@ -40,6 +39,16 @@ advanced_network:
       affinity: 0
       num_bufs: 43200
       buf_size: 1200
+    - name: "Data_TX_CPU"
+      kind: "huge"
+      affinity: 0
+      num_bufs: 43200
+      buf_size: 20
+    - name: "Data_TX_GPU"
+      kind: "device"
+      affinity: 0
+      num_bufs: 43200
+      buf_size: 1200
 
     interfaces:
     - name: "rx_port"
@@ -48,8 +57,9 @@ advanced_network:
         queues:
         - name: "rx_q_1"
           id: 1
-          cpu_core:  "11,12,13"
+          cpu_core:  "11,12"
           batch_size: 4320
+          output_port: "bench_rx_out_1"
           memory_regions:
           - "Data_RX_CPU"
           - "Data_RX_GPU"
@@ -75,11 +85,49 @@ advanced_network:
               - 50001
             stats_report_interval_ms: 1000
             send_packet_ext_info: true
+      tx:
+        queues:
+        - name: "tx_q_1"
+          id: 0
+          cpu_core:  "13"
+          batch_size: 4320
+          output_port: "bench_tx_out_1"
+          memory_regions:
+          - "Data_TX_CPU"
+          - "Data_TX_GPU"
+          rivermax_tx_settings:
+            settings_type: "media_sender"
+            memory_registration: true
+            memory_allocation: true
+            memory_pool_location: "device"
+            #allocator_type: "huge_page_2mb"
+            verbose: true
+            sleep_between_operations: false
+            local_ip_address: 2.1.0.12
+            destination_ip_address: 224.1.1.2
+            destination_port: 50001
+            stats_report_interval_ms: 1000
+            send_packet_ext_info: true
+            video_format: YCbCr-4:2:2
+            bit_depth: 10
+            frame_width: 1920
+            frame_height: 1080
+            frame_rate: 60
+            dummy_sender: false
 
 bench_rx:
-  interface_name: "rx_port" # Name of the RX port from the advanced_network config
-  gpu_direct: true          # Set to true if using a GPU region for the Rx queues.
-  split_boundary: true      # Whether header and data is split (Header to CPU)
+  gpu_direct: true        # Set to true if using a GPU region for the Rx queues.
+  split_boundary: true    # Whether header and data is split (Header to CPU)
   batch_size: 8640
   max_packet_size: 1220
   header_size: 20
+
+bench_tx:
+  address: cc:00.1
+  sample_format: YUV422
+  frame_width: 1920
+  frame_height: 1080
+  bit_depth: 10
+  file_path: "./build/adv_networking_bench/applications/adv_networking_bench/cpp/input_file.ycbcr"
+  payload_memory: "device"
+
