--- a/applications/adv_networking_bench/cpp/CMakeLists.txt
+++ b/applications/adv_networking_bench/cpp/CMakeLists.txt
@@ -97,6 +97,18 @@ add_custom_target(adv_networking_bench_rivermax_rx_yaml
 )
 add_dependencies(adv_networking_bench adv_networking_bench_rivermax_rx_yaml)
 
+add_custom_target(adv_networking_bench_rivermax_tx_yaml
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../adv_networking_bench_rivermax_tx.yaml" ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../adv_networking_bench_rivermax_tx.yaml"
+)
+add_dependencies(adv_networking_bench adv_networking_bench_rivermax_tx_yaml)
+
+add_custom_target(adv_networking_bench_rivermax_tx_rx_yaml
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../adv_networking_bench_rivermax_tx_rx.yaml" ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../adv_networking_bench_rivermax_rx.yaml"
+)
+add_dependencies(adv_networking_bench adv_networking_bench_rivermax_tx_rx_yaml)
+
 # Installation
 install(TARGETS adv_networking_bench
         DESTINATION examples/adv_networking_bench
@@ -110,6 +122,8 @@ install(
     ../adv_networking_bench_default_sw_loopback.yaml
     ../adv_networking_bench_gpunetio_tx_rx.yaml
     ../adv_networking_bench_rivermax_rx.yaml
+    ../adv_networking_bench_rivermax_tx.yaml
+    ../adv_networking_bench_rivermax_tx_rx.yaml
   DESTINATION examples/adv_networking_bench
   COMPONENT adv_networking_bench-configs
   PERMISSIONS OWNER_READ OWNER_WRITE
