--- a/applications/adv_networking_bench/adv_networking_bench_rivermax_tx_rx.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_rivermax_tx_rx.yaml
@@ -24,7 +24,7 @@ advanced_network:
   cfg:
     version: 1
     manager: "rivermax"
-    master_core: 5              # Master CPU core
+    master_core: 6              # Master CPU core
     debug: 1
     log_level: "debug"
 
@@ -55,11 +55,10 @@ advanced_network:
       address: cc:00.1
       rx:
         queues:
-        - name: "rx_q_1"
-          id: 1
-          cpu_core:  "11,12"
+        - name: "rx_q_0"
+          id: 0
+          cpu_core:  "10"
           batch_size: 4320
-          output_port: "bench_rx_out_1"
           memory_regions:
           - "Data_RX_CPU"
           - "Data_RX_GPU"
@@ -68,15 +67,15 @@ advanced_network:
             memory_registration: true
             #allocator_type: "huge_page_2mb"
             verbose: true
-            max_path_diff_us: 100
+            max_path_diff_us: 10000
             ext_seq_num: true
-            sleep_between_operations_us: 100
+            sleep_between_operations_us: 0
             local_ip_addresses:
               - 2.1.0.12
               - 2.1.0.12
             source_ip_addresses:
-              - 2.1.0.12
-              - 2.1.0.12
+              - 2.1.0.2
+              - 2.1.0.2
             destination_ip_addresses:
               - 224.1.1.1
               - 224.1.1.2
@@ -89,7 +88,7 @@ advanced_network:
         queues:
         - name: "tx_q_1"
           id: 0
-          cpu_core:  "13"
+          cpu_core:  "14"
           batch_size: 4320
           output_port: "bench_tx_out_1"
           memory_regions:
@@ -104,7 +103,7 @@ advanced_network:
             verbose: true
             sleep_between_operations: false
             local_ip_address: 2.1.0.12
-            destination_ip_address: 224.1.1.2
+            destination_ip_address: 224.1.1.3
             destination_port: 50001
             stats_report_interval_ms: 1000
             send_packet_ext_info: true
@@ -116,14 +115,15 @@ advanced_network:
             dummy_sender: false
 
 bench_rx:
-  gpu_direct: true        # Set to true if using a GPU region for the Rx queues.
-  split_boundary: true    # Whether header and data is split (Header to CPU)
+  interface_name: "rx_port" # Name of the RX port from the advanced_network config
+  gpu_direct: true          # Set to true if using a GPU region for the Rx queues.
+  split_boundary: true      # Whether header and data is split (Header to CPU)
   batch_size: 8640
   max_packet_size: 1220
   header_size: 20
 
 bench_tx:
-  address: cc:00.1
+  interface_name: cc:00.1
   sample_format: YUV422
   frame_width: 1920
   frame_height: 1080
