add holoscan-xr pybindings and gsplat app
Signed-off-by: Mimi Liao <mimil@nvidia.com>
Co-authored-by: Connor Smith <cosmith@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -128,6 +128,7 @@ add_holohub_application(yolo_model_deployment)
 add_holohub_application(vila_live)
 add_holohub_application(holochat)
 add_holohub_application(xr_holoviz DEPENDS OPERATORS xr)
+add_holohub_application(xr_gsplat DEPENDS OPERATORS xr)
 add_subdirectory(orsi)
 add_subdirectory(nvidia_nim)
 add_subdirectory(ehr_query_llm)
