Add Slang shader language example and operator.
Signed-off-by: Andreas Heumann <aheumann@nvidia.com>

--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -35,6 +35,7 @@ add_holohub_operator(prohawk_video_processing)
 add_holohub_operator(qt_video)
 add_holohub_operator(realsense_camera)
 add_subdirectory(orsi)
+add_holohub_operator(slang_shader)
 add_holohub_operator(tensor_to_file)
 add_holohub_operator(tensor_to_video_buffer)
 add_holohub_operator(tool_tracking_postprocessor)
