feat(advanced_network_media) Add Advanced Network Media operators
- Add AdvNetworkMediaRxOp for receiving media streams over Rivermax
  - Supports packet-to-frame conversion with ANO Burst processing
  - Configurable video formats, bit depths, and frame dimensions
  - Output as VideoBuffer or Tensor entities

- Add AdvNetworkMediaTxOp for transmitting media streams over Rivermax
  - Processes VideoBuffer/Tensor inputs for network transmission
  - Configurable network interface and queue management
  - Support for various video formats

Features:
  - SMPTE 2110 compliance for professional media over IP
  - GPU acceleration and GPUDirect support
  - Low latency optimizations
  - Python bindings for both operators

These operators build upon the Advanced Network library to provide
specialized functionality for broadcast and media streaming
use cases requiring strict timing and high throughput performance.

Signed-off-by: Rony Rado <rrado@nvidia.com>

--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -15,6 +15,7 @@
 
 # Add operators (in alphabetical order)
 add_holohub_operator(advanced_network)
+add_subdirectory(advanced_network_media)
 add_holohub_operator(aja_source)
 add_holohub_operator(apriltag_detector)
 add_holohub_operator(basic_network)
